--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,13 +45,18 @@ dependencies:
   html: ^0.15.0
   url_launcher: ^6.0.9
   file_picker: ^3.0.4
-  dio: ^3.0.10
   path_provider: ^2.0.2
   downloads_path_provider_28: ^0.1.2
   permission_handler: ^6.0.0
   open_file: ^3.2.1
   flutter_local_notifications: ^5.0.0+4
   flutter_launcher_icons: ^0.9.1
+  firebase_core: ^1.5.0
+  firebase_analytics: ^5.0.2
+  firebase_auth: ^3.0.2
+  cloud_firestore: ^2.5.0
+  http_parser: ^4.0.0
+  dio: ^4.0.0
 
 
 dev_dependencies:
